// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAI e2e test > should be successful with structured_output 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "actualData": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": true,
    },
    "arrayMax": {
      "description": "any valid sample array of strings with a maximum of 5 strings
constraints: maximum length 5",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "arrayMin": {
      "description": "any valid sample array of strings with a minimum of 1 string
constraints: minimum length 1",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "date": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateAfter": {
      "description": "a valid sample date after 2024-01-01
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateBefore": {
      "description": "a valid sample date before today
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "default": {
      "default": "test",
      "description": "sample text that is the default value",
      "type": "string",
    },
    "enum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "exampleArray": {
      "description": "any valid array of example strings",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "nativeEnum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "nullable": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "leave this field empty as an example of a nullable field",
    },
    "number": {
      "description": "any valid sample number",
      "type": "number",
    },
    "numberGt": {
      "description": "any valid sample number greater than 3
constraints: greater than 3",
      "type": "number",
    },
    "numberGte": {
      "description": "any valid sample number greater than or equal to 1
constraints: greater than or equal to 1",
      "type": "number",
    },
    "numberInt": {
      "description": "any valid sample number that is an integer",
      "type": "integer",
    },
    "numberLt": {
      "description": "any valid sample number less than 6
constraints: lower than 6",
      "type": "number",
    },
    "numberLte": {
      "description": "any valid sample number less than or equal to 1
constraints: lower than or equal to 1",
      "type": "number",
    },
    "numberMultipleOf": {
      "description": "any valid sample number that is a multiple of 2
constraints: multiple of 2",
      "type": "number",
    },
    "object": {
      "additionalProperties": false,
      "description": "any valid sample object with a string and a number",
      "properties": {
        "bar": {
          "type": "number",
        },
        "foo": {
          "type": "string",
        },
      },
      "required": [
        "foo",
        "bar",
      ],
      "type": "object",
    },
    "objectLoose": {
      "additionalProperties": false,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "objectNested": {
      "additionalProperties": false,
      "description": "any valid sample data",
      "properties": {
        "user": {
          "additionalProperties": false,
          "properties": {
            "age": {
              "description": "constraints: greater than or equal to 18",
              "type": "number",
            },
            "name": {
              "description": "constraints: minimum length 2",
              "type": "string",
            },
          },
          "required": [
            "name",
            "age",
          ],
          "type": "object",
        },
      },
      "required": [
        "user",
      ],
      "type": "object",
    },
    "objectPassthrough": {
      "additionalProperties": false,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "optional": {
      "anyOf": [
        {
          "description": "leave this field empty as an example of an optional field",
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "leave this field empty as an example of an optional field",
    },
    "record": {
      "description": "a map of two sample string keys to sample string values",
      "items": {
        "additionalProperties": false,
        "properties": {
          "key": {
            "type": "string",
          },
          "value": {
            "type": "string",
          },
        },
        "required": [
          "key",
          "value",
        ],
        "type": "object",
      },
      "type": "array",
      "x-record": true,
    },
    "recordEnumKeys": {
      "additionalProperties": false,
      "description": "a map with exactly the keys A and B mapped to sample strings",
      "properties": {
        "A": {
          "type": "string",
        },
        "B": {
          "type": "string",
        },
      },
      "required": [
        "A",
        "B",
      ],
      "type": "object",
      "x-record-object": true,
    },
    "string": {
      "description": "Sample text",
      "type": "string",
    },
    "stringCuid": {
      "description": "a valid sample cuid",
      "type": "string",
    },
    "stringEmail": {
      "description": "a sample email address
constraints: a valid email",
      "type": "string",
    },
    "stringEmoji": {
      "description": "a valid sample emoji",
      "type": "string",
    },
    "stringMax": {
      "description": "sample text with a maximum of 10 characters
constraints: maximum length 10",
      "type": "string",
    },
    "stringMin": {
      "description": "sample text with a minimum of 5 characters
constraints: minimum length 5",
      "type": "string",
    },
    "stringRegex": {
      "description": "a valid sample string that satisfies the regex
constraints: input must match this regex ^test-",
      "type": "string",
    },
    "stringUrl": {
      "description": "a valid sample url",
      "type": "string",
    },
    "stringUuid": {
      "description": "a valid sample uuid
constraints: a valid uuid",
      "type": "string",
    },
    "unionObjects": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "amount": {
              "type": "number",
            },
            "inventoryItemName": {
              "type": "string",
            },
          },
          "required": [
            "amount",
            "inventoryItemName",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "permissions": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "type": {
              "type": "string",
            },
          },
          "required": [
            "type",
            "permissions",
          ],
          "type": "object",
        },
      ],
      "description": "give an valid object",
    },
    "unionPrimitives": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
      ],
      "description": "sample text or number",
    },
  },
  "required": [
    "string",
    "stringMin",
    "stringMax",
    "stringEmail",
    "stringEmoji",
    "stringUrl",
    "stringUuid",
    "stringCuid",
    "stringRegex",
    "number",
    "numberGt",
    "numberLt",
    "numberGte",
    "numberLte",
    "numberMultipleOf",
    "numberInt",
    "exampleArray",
    "arrayMin",
    "arrayMax",
    "date",
    "dateAfter",
    "dateBefore",
    "actualData",
    "object",
    "objectNested",
    "objectPassthrough",
    "objectLoose",
    "nullable",
    "enum",
    "nativeEnum",
    "unionPrimitives",
    "unionObjects",
    "record",
    "recordEnumKeys",
    "default",
    "optional",
  ],
  "type": "object",
  "x-optional": [
    "optional",
  ],
}
`;

exports[`OpenAI e2e test > should be successful with structured_output 2`] = `
{
  "value": {
    "actualData": 2024-06-01T16:30:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "sample",
    ],
    "date": 2023-12-15T10:00:00.000Z,
    "dateAfter": 2024-02-01T12:00:00.000Z,
    "dateBefore": 2024-05-01T08:00:00.000Z,
    "default": "",
    "enum": "A",
    "exampleArray": [
      "one",
      "two",
    ],
    "nativeEnum": "B",
    "nullable": null,
    "number": 42,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 10,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 6,
    "object": {
      "bar": 7,
      "foo": "bar",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 28,
        "name": "John",
      },
    },
    "objectPassthrough": {},
    "optional": undefined,
    "record": {
      "first": "value1",
      "second": "value2",
    },
    "recordEnumKeys": {
      "A": "alpha",
      "B": "bravo",
    },
    "string": "sample text",
    "stringCuid": "cjnz7qug50000q4rmniodw5k9",
    "stringEmail": "example@email.com",
    "stringEmoji": "😊",
    "stringMax": "shorttext",
    "stringMin": "hello",
    "stringRegex": "test-string",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "unionObjects": {
      "amount": 100,
      "inventoryItemName": "Widget",
    },
    "unionPrimitives": "example",
  },
}
`;

exports[`OpenAI e2e test > should handle tool call with manySchemas input 1`] = `
{
  "value": {
    "actualData": 2024-04-12T10:30:00.000Z,
    "arrayMax": [
      "one",
      "two",
    ],
    "arrayMin": [
      "item1",
    ],
    "date": 2024-05-01T12:00:00.000Z,
    "dateAfter": 2024-06-10T00:00:00.000Z,
    "dateBefore": 2023-12-01T08:00:00.000Z,
    "default": "test",
    "enum": "B",
    "exampleArray": [
      "foo",
      "bar",
    ],
    "nativeEnum": "A",
    "nullable": null,
    "number": 10,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 42,
    "numberLt": 2,
    "numberLte": 1,
    "numberMultipleOf": 4,
    "object": {
      "bar": 12,
      "foo": "baz",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 22,
        "name": "Ed",
      },
    },
    "objectPassthrough": {},
    "optional": undefined,
    "record": {
      "k1": "val1",
      "k2": "val2",
    },
    "recordEnumKeys": {
      "A": "alpha",
      "B": "bravo",
    },
    "string": "Sample text",
    "stringCuid": "cixl2cyk0000y3rmniodnnqr5",
    "stringEmail": "example@email.com",
    "stringEmoji": "😊",
    "stringMax": "Short",
    "stringMin": "More than five",
    "stringRegex": "test-value",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "unionObjects": {
      "amount": 7,
      "inventoryItemName": "apple",
    },
    "unionPrimitives": "hello",
  },
}
`;

exports[`OpenAI e2e test > should handle tool call with manySchemas input and output 1`] = `
"Here is the validated tool output with sample data:

{
  "string": "Sample text",
  "stringMin": "Hello!",
  "stringMax": "ShortText",
  "stringEmail": "example@email.com",
  "stringEmoji": "😊",
  "stringUrl": "https://example.com",
  "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
  "stringCuid": "cjo8e8abb0000q9r6svi0qz4z",
  "stringRegex": "test-1234",
  "number": 42,
  "numberGt": 10,
  "numberLt": 3,
  "numberGte": 5,
  "numberLte": 1,
  "numberMultipleOf": 8,
  "numberInt": 7,
  "exampleArray": ["apple", "banana"],
  "arrayMin": ["one"],
  "arrayMax": ["a", "b", "c"],
  "date": "2024-06-20T12:00:00.000Z",
  "dateAfter": "2024-06-02T00:00:00.000Z",
  "dateBefore": "2024-06-01T00:00:00.000Z",
  "actualData": "2024-06-02T14:30:00.000Z",
  "object": { "foo": "bar", "bar": 123 },
  "objectNested": { "user": { "name": "Al", "age": 25 } },
  "objectPassthrough": {},
  "objectLoose": {},
  "nullable": null,
  "enum": "B",
  "nativeEnum": "A",
  "unionPrimitives": "Text value",
  "unionObjects": { "amount": 10, "inventoryItemName": "Book" },
  "record": { "name": "John", "city": "London" },
  "recordEnumKeys": { "A": "first", "B": "second" },
  "default": "test"
}"
`;
